2006-03-21  Atsushi Enomoto  <atsushi@ximian.com>

	* HebrewCalrndar.cs : simply use CCHebrewCalendar.last_day_of_month().
	  Patch by Yaacov Akiba Slama. Fixed bug #76252.

2006-03-20  Atsushi Enomoto  <atsushi@ximian.com>

	* HebrewCalrndar.cs : removed commented obsolete code.

2006-03-16  Atsushi Enomoto  <atsushi@ximian.com>

	* TextInfo.cs : (ToUpper/ToLower) use InternalAllocateStr() and
	  pointers rather than StringBuilder.

2006-03-07  Peter Dennis Bartok  <pbartok@novell.com>

	* DateTimeFormatInfo.cs: Restored original field order to allow
	  some automatic locale fu to happen (mono unmanaged code relies 
	  on the field order to fill out DateTimeFormatInfo)

2006-03-02  Peter Dennis Bartok  <pbartok@novell.com>

	* DateTimeFormatInfo.cs: Switched (where possible) our internal
	  field names to match MS names. Added fields that MS has and we
	  don't. Fixes serialization issues with MS.
	* CultureInfo.cs, Calendar.cs, TextInfo.cs, 
	  GregorianCalenda.cs: Hiding internal attributes from serialization

2006-01-25  Atsushi Enomoto  <atsushi@ximian.com>

	* CultureInfo.cs : Clone() attempted to clone number and date time
	  formats, thus failed. Fixed bug #77347.

2005-12-08  Sebastien Pouliot  <sebastien@ximian.com> 

	* DaylightTime.cs: Fixed serialization to be compatible with MS FX.
	Pre-requisite to fix bug #76094.

2005-12-06  Sebastien Pouliot  <sebastien@ximian.com> 

	* DateTimeStyles.cs: ComVisible is only needed in 2.0.
	* TextInfo.cs: Added some 2.0 features that were needed (e.g. LCID)
	to implement serialization for another class. Added TODO on class for 
	deserialization (so it shows up in the status page).

2005-11-29  Atsushi Enomoto  <atsushi@ximian.com>

	* CompareInfo.cs : IsSortable() are static.
	* CharUnicodeInfo.cs : became non-static in RTM.
	* Calendar.cs : added support for Clone() and IsReadOnly.
	* HijriCalendar.cs ThaiBuddhistCalendar.cs HebrewCalendar.cs
	  GregorianCalendar.cs KoreanCalendar.cs JulianCalendar.cs